--- a/css/main.css
+++ b/css/main.css
@@ -248,11 +248,18 @@ body {
     background-position: center center;
     padding: 80px;
 }
+.banner-order.no-bg{
+    background: none;
+}
 
 .banner-order form {
     padding: 80px;
     background: #FFDCBE;
     box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.25);
+}
+
+.banner-order.no-bg form{
+    box-shadow: none;
 }
 
 .banner-order h3 {
@@ -300,7 +307,7 @@ body {
 }
 
 .banner-order .input-icons .input-icon {
-    position: absolute;
+    position: absolute; 
     top: 16px;
     right: 12px;
 }
@@ -413,7 +420,7 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     height: 100%;
     position: absolute;
     width: 100%;
-    background: #0004;
+    background: #0005;
     top: 0;
     left: 0;
     z-index: 0;
@@ -517,9 +524,12 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 
 .menu-page .product-list .product-item {
     display: inline-block;
-    width: calc(33% - 32px);
+    width: calc((100% - 72px)  / 3 );
     margin-bottom: 80px;
     margin-right: 32px;
+}
+.menu-page .product-list .product-item:nth-child(3n){
+    margin-right: 0;
 }
 
 .paging a.active {
@@ -568,7 +578,8 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     margin-top: 32px;
     padding-left: 0;
 }
-.side-bar .categories li{
+
+.side-bar .categories li {
     display: block;
     border-top: 1px solid rgba(0, 0, 0, 0.2);
     padding: 8px 0;
@@ -583,4 +594,9 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 .side-bar .categories a.active {
     padding: 10px 16px;
     background: #FFDCBE;
+}
+
+.news-page{
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
