--- a/css/main.css
+++ b/css/main.css
@@ -245,7 +245,10 @@ a:hover{
     border-radius: 50%;
     padding: 16px;
 }
+.banner-menu  .menu-border-outer {
+    padding: 50px;
 
+}
 .banner-order {
     background: url(/image/bg-order.jpg);
     background-size: cover;
@@ -778,6 +781,11 @@ margin-bottom: 44px;
     .news-item .news-content{
         width: 100%;
     }
+    .banner-order form,
+    .banner-order{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
     
 }
 
@@ -792,13 +800,13 @@ margin-bottom: 44px;
     .banner-intro h4{
         margin-top: 32px;
     }
-    .banner-order form,
-    .banner-order{
-        padding-left: 10px;
-        padding-right: 10px;
-    }
+   
     .banner-title{
         height: 200px;
         padding-top: 70px;
+    }
+    .banner-menu  .menu-border-outer {
+        padding: 0px;
+    
     }
 }
