--- a/css/main.css
+++ b/css/main.css
@@ -407,17 +407,22 @@ a:hover{
     margin: 0 5px;
     margin-top: -4px;
 }
+.customer-count button:focus,
+    .customer-count button:active{
+    outline: 0;
+    border: 0;
+}
 
 input[type="date"]::-webkit-inner-spin-button,
 input[type="date"]::-webkit-calendar-picker-indicator {
-    display: none;
-    -webkit-appearance: none;
+    background-image: url(./../image/calendar_icon.svg);
+    height: 18px;
 }
 
 input[type="time"]::-webkit-inner-spin-button,
 input[type="time"]::-webkit-calendar-picker-indicator {
-    display: none;
-    -webkit-appearance: none;
+    background-image: url(./../image/calendar_icon.svg);
+    height: 18px;
 }
 
 .banner-title {
@@ -471,13 +476,15 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     padding-bottom: 80px;
     padding-top: 80px;
 }
-
+.intro-page .product-list{
+    display: flex;
+}
 .intro-page .product-list .product-item {
-    display: inline-block;
+    /* display: inline-block; */
     width: 25%;
     position: relative;
     font-size: 0;
-    margin: -2px;
+    /* margin: -2px; */
 }
 
 .intro-page .product-list .product-item::after {
@@ -608,11 +615,14 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     display: block;
     padding: 10px 0;
     color: #000;
+    transition: all 0.2s linear;
 }
-
+.side-bar .categories a:hover,
 .side-bar .categories a.active {
     padding: 10px 16px;
     background: #FFDCBE;
+    transition: all 0.2s linear;
+    
 }
 
 .news-page {
@@ -808,5 +818,14 @@ margin-bottom: 44px;
     .banner-menu  .menu-border-outer {
         padding: 0px;
     
+    }
+    .intro-page .video{
+        padding-bottom: 30px;
+        padding-top: 30px;
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+    .intro-page .video iframe{
+        height: 300px;
     }
 }
