--- a/css/main.css
+++ b/css/main.css
@@ -828,4 +828,23 @@ margin-bottom: 44px;
     .intro-page .video iframe{
         height: 300px;
     }
+    .banner-promo {
+        min-height: 208px;
+        background-image: url(./../image/home-promo.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        padding-top: 50px;
+    }
+    
+    .banner-promo img {
+        display: block;
+        height: 37px;
+    }
+    
+    .banner-promo img:nth-child(2) {
+        display: block;
+        height: 47px;
+        margin-top: 17px;
+    }
 }
